fix: Avoid tap highlight on overlay on iOS

--- a/src/components/Menu/index.styl
+++ b/src/components/Menu/index.styl
@@ -27,3 +27,4 @@
 
 .cozy-menu-overlay
   opacity 0
+  -webkit-tap-highlight-color rgba(0,0,0,0)
